# face_recognition_models

./: .gitignore  Makefile  README.md  pyproject.toml
face_recognition_models/: __init__.py
tests/: test_model_paths.py
